--- a/page4/assets4/style4.css
+++ b/page4/assets4/style4.css
@@ -46,8 +46,7 @@ body
 	height: 100%;
 	padding-left : 25px;
 	padding-right: 25px;
-	
-	
+	height: 60px;	
 }
 
 #menu2 ul 
@@ -125,7 +124,7 @@ form
 }
 
 
-header ul
+header div
 {
 	display : flex;
 	justify-content : center;
@@ -134,7 +133,7 @@ header ul
 }
 
 
-header ul p
+header div p
 {
 	font-family: "simplicity";
 	font-size: x-large;
@@ -142,7 +141,7 @@ header ul p
 
 
 
-header ul img 
+header div img 
 {
 	
 	width: 60px;
@@ -254,7 +253,6 @@ footer div p
 {
 	display : flex;
 	flex-direction: column-reverse;
-	justify-content : justify;
 	text-align: center;
 	align-items : center;
 }
@@ -263,7 +261,6 @@ footer div p
 {
 	display : flex;
 	flex-wrap: wrap;
-	justify-content : justify;
 	text-align: center;
 	align-items : center;
 	border-left: 5px dotted SandyBrown;
@@ -276,10 +273,10 @@ footer div p
 
 .listeart img
 {
+	display: flex;
 	height: auto;
 	width: 250px;
 	margin: 50px 50px 0px 50px;
-
 	border-top: 3px solid SandyBrown;
 	border-left: 3px solid SandyBrown;
 	border-right: 3px solid SandyBrown;
@@ -287,9 +284,10 @@ footer div p
 
 .listeart p
 {
-	
+	display: flex;
+	justify-content: center;
 	width: 250px;
-	margin: 0px 52px 0px 52px;
+	margin: 0px 50px 0px 50px;
 	font-family: "simplicity";
 	font-size: large;
 	font-weight: bold; 
@@ -297,12 +295,16 @@ footer div p
 	border-left: 3px solid SandyBrown;
 	border-right: 3px solid SandyBrown;
 
+	
 }
 
 .listeart .prix
 {
+	display: flex;
+	justify-content: center;
+
 	width: 250px;
-	margin: 0px 52px 0px 52px;
+	margin: 0px 50px 0px 50px;
 	font-size: xx-large;
 	border-bottom: 3px solid SandyBrown;
 	border-left: 3px solid SandyBrown;
