--- a/page10/assets10/style10.css
+++ b/page10/assets10/style10.css
@@ -127,7 +127,7 @@ form
 }
 
 
-header ul
+header div
 {
 	display : flex;
 	justify-content : center;
@@ -136,7 +136,7 @@ header ul
 }
 
 
-header ul p
+header div p
 {
 	font-family: "simplicity";
 	font-size: x-large;
@@ -144,7 +144,7 @@ header ul p
 
 
 
-header ul img 
+header div img 
 {
 	
 	width: 60px;
@@ -467,7 +467,6 @@ footer div p
 .ecrire
 {
 	width: 100%;
-	background-color: none;
 }
 
 .ecrire p
