--- a/page7/assets7/style7.css
+++ b/page7/assets7/style7.css
@@ -55,6 +55,7 @@ body
 	display : flex;
 	justify-content : center;
 	background-color: SandyBrown;
+	flex-wrap: wrap;
 	list-style:none;
 	width: 70%;
 }
